updated work with photo slider

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -76,7 +76,8 @@
   .two-thirds.column              { width: 65.3333333333%; }
 
   .one-half.column                { width: 48%; }
-
+  .one-fourth.colum               {width: 23%; }
+ 
   /* Offsets */
   .offset-by-one.column,
   .offset-by-one.columns          { margin-left: 8.66666666667%; }
